Bug 148461 - Assertion failed: (pMerged->pFirstNode->GetIndex() <= i), function DelFrames, file node.cxx, line 1444.
Summary: Assertion failed: (pMerged->pFirstNode->GetIndex() <= i), function DelFrames,...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:7.4.0 target:7.3.4
Keywords:
Depends on:
Blocks: Track-Changes Crash-Assert
  Show dependency treegraph
 
Reported: 2022-04-08 06:37 UTC by Telesto
Modified: 2022-08-11 08:37 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
BT with symbols (7.81 KB, text/plain)
2022-04-08 06:38 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2022-04-08 06:37:50 UTC
Description:
Assertion failed: (pMerged->pFirstNode->GetIndex() <= i), function DelFrames, file node.cxx, line 1444.

Steps to Reproduce:
1. Open attachment 178311 [details]
2. Go to page 2
3. Place cursor in the section containing  "d) 18"
4. press and hold backspace when c 12 gets deleted assert occurs

Actual Results:
Assert

Expected Results:
Not so


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: fbf739198aa7f02975d531521c6525073783c7f1
CPU threads: 8; OS: Mac OS X 12.2.1; UI render: Skia/Metal; VCL: osx
Locale: nl-NL (nl_NL.UTF-8); UI: en-US
Calc: threaded
Comment 1 Telesto 2022-04-08 06:38:30 UTC
Created attachment 179399 [details]
BT with symbols
Comment 2 Aron Budea 2022-05-10 08:09:08 UTC
Confirmed using the following debug build: LO 7.4.0.0.alpha0+ (1bf5884a7bd5e506c6edd9769f98e3102a4c4eb9) / Ubuntu.

This is the assert:
sw/source/core/docnode/node.cxx:1444: void SwContentNode::DelFrames(const SwRootFrame*): Assertion `pMerged->pFirstNode->GetIndex() <= i' failed

I see no mention of this being a regression, so I'm not sure bug 138327 META is relevant, but feel free to add it again with sufficient evidence.
What I can see is that the assert occurs with change tracking enabled, and not with it disabled.
Comment 3 Michael Stahl 2022-05-17 17:06:31 UTC
fixed on master
Comment 4 Commit Notification 2022-05-17 17:07:00 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6ee57b39ba912f0902714d8c4d1a267511a3c6ca

tdf#148461 sw_redlinehide: fix assert in SwContentNode::DelFrames()

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2022-05-18 08:39:46 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/6767a309b7c3ddd283a83bcf7dc36fecaf9cc6b9

tdf#148461 sw_redlinehide: fix assert in SwContentNode::DelFrames()

It will be available in 7.3.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Gabor Kelemen (Collabora) 2022-08-11 08:37:42 UTC
Verified in

Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 7d56dae3375dc0180aa6d20983b3f5f962302588
CPU threads: 14; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded

(custom build with enable-dbgutil)

No assert when C 12 is deleted.