tdf#148461 sw_redlinehide: fix assert in SwContentNode::DelFrames()

The assert(pMerged->pFirstNode->GetIndex() <= i) is intended for when
frames are really deleted, but CheckParaRedlineMerge() calls it while
the now-outdated MergedPara is still on the frame, but the nodes already
have new flags; assign a dummy node in this situation.

Change-Id: I23fbfdb6901e6e15abf92913aa252e59877bc280
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/134475
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>